--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,8 @@
 .formulario h1{
     font-size: 24px ;
     color: #fff;
+    align-self: center;
+    place-content: center;
 }
 .formulario form{
     display: flex;
@@ -89,4 +91,24 @@ hr{
     padding: 8px 15px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+a{
+    text-decoration: none;
+    color: #ffffff;
+}
+
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #0095f8;
+    color: #ffffff;
+    text-align: center;
+    padding: 10px; 
+}
+img{
+    width: 50px;
+    height: 50px;
 }
